Bug Fix: clickability of homepage menu on mobile

--- a/less/style.less
+++ b/less/style.less
@@ -15,12 +15,10 @@ html {
 }
 
 header#masthead .navigation-top{
-	// top: 0; 
-	.wrap {
-		//width: 100%;
-    	//max-width: none;
-    	//background: rgba(255,255,255,.5);
-    	//display: inline-block;
+	z-index: 10;
+	button.dropdown-toggle {
+		width: 100%;
+    	text-align: right;
 	}
 }
 
